--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Modules/SharpZipLib"]
 	path = Modules/SharpZipLib
 	url = https://github.com/Stryxus/SharpZipLib
+[submodule "Modules/zstd"]
+	path = Modules/zstd
+	url = https://github.com/facebook/zstd
