Whoops, forgot to checkout the repo and submodules

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Checkout repository and submodules
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
       - name: Setup .NET 9 SDK
         uses: actions/setup-dotnet@v4
         with:
