--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,21 +84,23 @@ jobs:
           }
         shell: pwsh
 
-      - name: Set version variables
-        id: set_version
+      - name: Set version variables (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
-          if [ "$RUNNER_OS" = "Windows" ]; then
-            $version = Get-Date -Format "yyyy.MM.dd.HHmm"
-            $info_version = Get-Date -Format "yyyy.MM.dd.HHmmss"
-            echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Append
-            echo "INFO_VERSION=$info_version" | Out-File -FilePath $env:GITHUB_ENV -Append
-          else
-            VERSION=$(date -u +'%Y.%m.%d.%H%M')
-            INFO_VERSION=$(date -u +'%Y.%m.%d.%H%M%S')
-            echo "VERSION=$VERSION" >> $GITHUB_ENV
-            echo "INFO_VERSION=$INFO_VERSION" >> $GITHUB_ENV
-          fi
+          VERSION=$(date -u +'%Y.%m.%d.%H%M')
+          INFO_VERSION=$(date -u +'%Y.%m.%d.%H%M%S')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "INFO_VERSION=$INFO_VERSION" >> $GITHUB_ENV
         shell: bash
+      
+      - name: Set version variables (Windows)
+        if: runner.os == 'Windows'
+        run: |
+          $version = Get-Date -Format "yyyy.MM.dd.HHmm"
+          $info_version = Get-Date -Format "yyyy.MM.dd.HHmmss"
+          Add-Content -Path $env:GITHUB_ENV -Value "VERSION=$version"
+          Add-Content -Path $env:GITHUB_ENV -Value "INFO_VERSION=$info_version"
+        shell: pwsh
 
       - name: Setup native dependencies
         run: |
