--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,8 +125,9 @@ jobs:
         if: runner.os == 'Windows'
         run: zstd\${{ matrix.script }}
         shell: cmd
-
-      - name: Build Framework-Dependent
+        
+      - name: Build Framework-Dependent (Linux/macOS)
+        if: runner.os != 'Windows'
         run: |
           dotnet publish ${{ env.PROJECT_PATH }} \
             -c Release \
@@ -137,6 +138,13 @@ jobs:
             /p:AssemblyVersion=${{ env.VERSION }} \
             /p:FileVersion=${{ env.VERSION }} \
             /p:InformationalVersion=${{ env.INFO_VERSION }}
+        shell: bash
+      
+      - name: Build Framework-Dependent (Windows)
+        if: runner.os == 'Windows'
+        run: >
+          dotnet publish $env:PROJECT_PATH -c Release -o out/fdd-${{ matrix.rid }} -r ${{ matrix.rid }} --no-self-contained /p:Version=$env:VERSION /p:AssemblyVersion=$env:VERSION /p:FileVersion=$env:VERSION /p:InformationalVersion=$env:INFO_VERSION
+        shell: pwsh
 
       - name: Build Self-Contained
         run: |
