Correct libzstd filename for Windows

--- a/SEUnp4ker/SEUnp4ker.csproj
+++ b/SEUnp4ker/SEUnp4ker.csproj
@@ -35,14 +35,14 @@
         <!-- Windows x64 -->
         <None Include="..\zstd\out\win-x64\zstd.dll"
               Condition="'$(RuntimeIdentifier)' == 'win-x64'">
-            <Link>zstd.dll</Link>
+            <Link>libzstd.dll</Link>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
 
         <!-- Windows arm64 -->
         <None Include="..\zstd\out\win-arm64\zstd.dll"
               Condition="'$(RuntimeIdentifier)' == 'win-arm64'">
-            <Link>zstd.dll</Link>
+            <Link>libzstd.dll</Link>
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
 
