--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,6 @@
 name: Release SEUnp4ker
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
   release:
     types: [created]
@@ -182,6 +179,7 @@ jobs:
   upload-release:
     needs: build
     runs-on: ubuntu-latest
+    if: github.event_name == 'release'
     steps:
       - uses: actions/download-artifact@v4
         with:
