--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -167,17 +167,44 @@ jobs:
           dotnet publish $env:PROJECT_PATH -c Release -o out/scd-${{ matrix.rid }} -r ${{ matrix.rid }} --self-contained true /p:Version=$env:VERSION /p:AssemblyVersion=$env:VERSION /p:FileVersion=$env:VERSION /p:InformationalVersion=$env:INFO_VERSION
         shell: pwsh
 
-      - name: Archive FDD
-        uses: actions/upload-artifact@v4
-        with:
-          name: fdd-${{ matrix.rid }}
-          path: out/fdd-${{ matrix.rid }}
+      # Zip Framework-Dependent build output
+      - name: Zip Framework-Dependent (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: |
+          cd out
+          zip -r ../fdd-${{ matrix.rid }}.zip fdd-${{ matrix.rid }}
+        shell: bash
 
-      - name: Archive SCD
+      - name: Zip Framework-Dependent (Windows)
+        if: runner.os == 'Windows'
+        run: Compress-Archive -Path out/fdd-${{ matrix.rid }}\* -DestinationPath fdd-${{ matrix.rid }}.zip
+        shell: pwsh
+
+      # Zip Self-Contained build output
+      - name: Zip Self-Contained (Linux/macOS)
+        if: runner.os != 'Windows'
+        run: |
+          cd out
+          zip -r ../scd-${{ matrix.rid }}.zip scd-${{ matrix.rid }}
+        shell: bash
+
+      - name: Zip Self-Contained (Windows)
+        if: runner.os == 'Windows'
+        run: Compress-Archive -Path out/scd-${{ matrix.rid }}\* -DestinationPath scd-${{ matrix.rid }}.zip
+        shell: pwsh
+
+      # Upload zipped artifacts
+      - name: Archive FDD ZIP
         uses: actions/upload-artifact@v4
         with:
-          name: scd-${{ matrix.rid }}
-          path: out/scd-${{ matrix.rid }}
+          name: fdd-${{ matrix.rid }}-zip
+          path: fdd-${{ matrix.rid }}.zip
+
+      - name: Archive SCD ZIP
+        uses: actions/upload-artifact@v4
+        with:
+          name: scd-${{ matrix.rid }}-zip
+          path: scd-${{ matrix.rid }}.zip
 
   upload-release:
     needs: build
@@ -188,7 +215,7 @@ jobs:
         with:
           path: artifacts
 
-      - name: Upload assets to release
+      - name: Upload zipped assets to release
         uses: softprops/action-gh-release@v2
         with:
-          files: artifacts/**/*
+          files: artifacts/**/*.zip
