Don't refer to macOS as osx, that's very old

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
             shell: bash
           # macOS
           - os: macos-latest
-            rid: osx-arm64
+            rid: macos-arm64
             arch: arm64
             script: build_macos_arm64.sh
             shell: bash
