--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -224,11 +224,11 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const version = process.env.VERSION || (new Date()).toISOString();
+            const version = '${{ needs.build.outputs.version }}';
             const releaseId = context.payload.release.id;
             await github.rest.repos.updateRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
               release_id: releaseId,
               name: version
-            });
+            })
