--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -224,7 +224,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const version = '${{ needs.build.outputs.version }}';
+            const version = 'v${{ needs.build.outputs.version }}';
             const releaseId = context.payload.release.id;
             await github.rest.repos.updateRelease({
               owner: context.repo.owner,
